; ModuleID = '/home/carl/AnghaBench/i3/i3bar/src/extr_child.c_kill_child.c'
source_filename = "/home/carl/AnghaBench/i3/i3bar/src/extr_child.c_kill_child.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i64, i64 }

@child = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@SIGTERM = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kill_child() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @child, i32 0, i32 0), align 8
  %3 = icmp sgt i64 %2, 0
  br i1 %3, label %4, label %21

4:                                                ; preds = %0
  %5 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @child, i32 0, i32 1), align 8
  %6 = icmp sgt i64 %5, 0
  br i1 %6, label %7, label %14

7:                                                ; preds = %4
  %8 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @child, i32 0, i32 2), align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %7
  %11 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @child, i32 0, i32 0), align 8
  %12 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @child, i32 0, i32 1), align 8
  %13 = call i32 @killpg(i64 %11, i64 %12)
  br label %14

14:                                               ; preds = %10, %7, %4
  %15 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @child, i32 0, i32 0), align 8
  %16 = load i64, i64* @SIGTERM, align 8
  %17 = call i32 @killpg(i64 %15, i64 %16)
  %18 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @child, i32 0, i32 0), align 8
  %19 = call i32 @waitpid(i64 %18, i32* %1, i32 0)
  %20 = call i32 (...) @cleanup()
  br label %21

21:                                               ; preds = %14, %0
  ret void
}

declare dso_local i32 @killpg(i64, i64) #1

declare dso_local i32 @waitpid(i64, i32*, i32) #1

declare dso_local i32 @cleanup(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
